--- a/news1.html
+++ b/news1.html
@@ -90,7 +90,7 @@
   </tr>
   <tr><td colspan="3">&nbsp;</td></tr><tr>
     <td colspan="3"><div style="height:650px; width:510px; padding:15px; background-image:url(images/alpha.png)"><strong>Duet: IN-GRID &amp; ZOE TIGANOURIA, a famous Greek Accordionist</strong><br><br>
-      <a href="https://web.archive.org/web/20170727072246/http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>      </td>
+      <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>      </td>
   </tr>
 </table>
 </div>
