--- a/news2.html
+++ b/news2.html
@@ -76,7 +76,7 @@
   </tr>
   <tr><td colspan="3">&nbsp;</td></tr><tr>
     <td colspan="3"><div style="height:650px; width:510px; padding:15px; background-image:url(images/alpha.png)"><strong>Russian Duet&nbsp;: IN-GRID &amp; ZHANNA FRISKE&nbsp;&nbsp;"Padaet Sneg"</strong><br><br>
-      <a href="https://web.archive.org/web/20170727183640/http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a></div>
+      <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a></div>
       </td>
   </tr>
 </table>
