--- a/news5.html
+++ b/news5.html
@@ -65,7 +65,7 @@
     <td width="33%" align="center">&nbsp;</td>
   </tr>
   <tr><td colspan="3">&nbsp;</td></tr><tr>
-    <td colspan="3"><div style="height:750px; width:510px; padding:15px; background-image:url(images/alpha2.png)"><a href="news5_eng.html"><img src="images/en.png" width="98" height="16" border="0" align="right"></a><strong>Kiki Swing</strong><br>
+    <td colspan="3"><div style="height:750px; width:510px; padding:15px; background-image:url(images/alpha2.png)"><strong>Kiki Swing</strong> <a href="news5_eng.html">English version</a><br>
       <br>
       
       In occasione della pubblicazione di "Tu es Foutu 2K12" Ingrid conosce i Réseau, che hanno realizzato le versioni "Original Jazz Mix" e  "Chill House Mix" del brano.<br><br>
