--- a/news02.html
+++ b/news02.html
@@ -43,10 +43,7 @@
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
 <div style=" width:450px; padding-left:100px; float:left">
   <div style="clear:both; height:160px"></div>
-  <img src="images/news-tit.png"><br><br><!--testo--><br><br><br><br><br><br>
-
-  
-   
+  <img src="images/news-tit.png"><br><br><!--testo--><br><br><br><br><br><br>   
   
   <!-- <img src="images/news-tit-2.png" width="374" height="25"><br><br> -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -54,7 +51,7 @@
     <td width="190" style="background-image:url(images/img_news2.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px">
      <strong>Russian Duet&nbsp;: IN-GRID &amp; ZHANNA FRISKE&nbsp;&nbsp;"Padaet Sneg"</strong><br><br>
-      <a href="https://web.archive.org/web/20170302013212/http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a>
+      <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a>
     </div>
       </td>
   </tr>
@@ -68,16 +65,12 @@
   <tr>
     <td width="190" style="background-image:url(images/img_news1.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px"><strong>Duet: IN-GRID &amp; ZOE TIGANOURIA, a famous Greek Accordionist</strong><br><br>
-      <a href="https://web.archive.org/web/20170302013212/http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>
+      <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>
       </td>
   </tr>
 </table><br>
 <div style=" width:510px"><a href="news1.html"><img src="images/read-more.png" width="65" height="12" border="0" align="right"></a></div><br> <hr style="border:1px solid #fff; width:510px">
 <br><br>
-
-
-
-
 
 <!-- <img src="images/page2.png" width="120" height="19" border="0" usemap="#Map"> -->
 
