--- a/lavieenrose.html
+++ b/lavieenrose.html
@@ -50,62 +50,62 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/BeauRoman.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/BeauRoman.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. Un Beau Roman</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/ChampsElysees_DanceVersion.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/ChampsElysees_DanceVersion.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Les Champs Elysees</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/ChansonDamour.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/ChansonDamour.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. Chanson D'Amour</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/EtMaintenant.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/EtMaintenant.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. Et Maintenant</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/NonJeNeRegretteRien.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/NonJeNeRegretteRien.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05. Mon Je Ne Regrette Rien</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/LaMer.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/LaMer.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>06. La Mer</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/LaVieEnRose.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/LaVieEnRose.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>07. La Vie en Rose</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/LesFeuillesMortes.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/LesFeuillesMortes.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>08. Les feuilles mortes</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/NeMeQuittePas.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/NeMeQuittePas.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>09. Ne Me Quitte Pas</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/UnHommeEtUneFemme.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/UnHommeEtUneFemme.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>10. Un Homme et une Femme</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/Milord.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/Milord.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>11. Milord</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101038oe_/http://in-grid.it/music/la-vie-en-rose/Accordeonist.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-vie-en-rose/Accordeonist.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>12. Accordeonist</strong><br>
 
 
