--- a/ledragueur.html
+++ b/ledragueur.html
@@ -50,27 +50,27 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20160807162205oe_/http://in-grid.it/music/le-dragueur-single/01_LeDragueur-FedoMoraRadioEdit.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/le-dragueur-single/01_LeDragueur-FedoMoraRadioEdit.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01.   Le Dragueur – Fedo Mora Radio Edit</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20160807162205oe_/http://in-grid.it/music/le-dragueur-single/02_LeDragueur-FedoMoraExtended.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/le-dragueur-single/02_LeDragueur-FedoMoraExtended.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Le Dragueur – Fedo Mora Extended Mix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20160807162205oe_/http://in-grid.it/music/le-dragueur-single/03_LeDragueur-DiskoMachine.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/le-dragueur-single/03_LeDragueur-DiskoMachine.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. Le Dragueur – DiskoMachine &amp; MarcoJ Remix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20160807162205oe_/http://in-grid.it/music/le-dragueur-single/04_LeDragueur-FedoMoraClubRemix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/le-dragueur-single/04_LeDragueur-FedoMoraClubRemix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. Le Dragueur – Fedo Mora Club Remix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20160807162205oe_/http://in-grid.it/music/le-dragueur-single/05_LeDragueur-FedoMoraMovieMix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/le-dragueur-single/05_LeDragueur-FedoMoraMovieMix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>BONUS TRACK: 05. Le Dragueur – Fedo Mora Movie Mix (Chill Version)</strong><br>
 
 
