--- a/loungemusique.html
+++ b/loungemusique.html
@@ -49,72 +49,72 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_comment.mp3" width="120" height="15" autostart="false">
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_comment.mp3" width="120" height="15" autostart="false">
 </embed><noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. COMMENT TE DIRE ADIEU</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_lesenfants.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_lesenfants.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. LES ENFANTS DU PIREE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_tuveuxou.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_tuveuxou.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. TU VEUX OU TU VEUX PAS </strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_etienne.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_etienne.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. ETIENNE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_maisnon.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_maisnon.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05. MAIS NON MAIS OUI</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_cestsibon.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_cestsibon.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>06. C'EST SI BON</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_alchimie.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_alchimie.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>07.  ALCHIMIE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_simpatique.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_simpatique.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>08. SYMPATHIQUE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/Tentacion_Al_Hombre.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/Tentacion_Al_Hombre.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>09. TENTACIÓN AL HOMBRE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_cestlaouate.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_cestlaouate.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>10. C'EST LA OUATE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_quierovivir.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_quierovivir.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>11. QUIERO VIVIR</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_angeoudiable.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_angeoudiable.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>12. ANGE OU DIABLE</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/ingrid_eteindine_mix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/ingrid_eteindine_mix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>13. L'ETE INDIEN</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170809214903oe_/http://www.in-grid.it/music/lounge-musique/PapillonneSurMoi.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://www.in-grid.it/music/lounge-musique/PapillonneSurMoi.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>Bonus Track: 14. PAPILLONNE SUR MOI (Fab Samperi Remix)</strong><br>
 
 
