--- a/news3.html
+++ b/news3.html
@@ -83,7 +83,7 @@
   <div style="clear:both; height:40px"></div>
   <a href="music.html" class="link page"><img src="images/music.png" alt="Music" border="0"></a>
   <div style="clear:both;"></div>
-  <a href="video.asp" class="link page"><img src="images/video.png" alt="Video" border="0"></a>
+  <a href="video.html" class="link page"><img src="images/video.png" alt="Video" border="0"></a>
   <div style="clear:both;"></div>
   <a href="gallery.html" class="link page"><img src="images/gallery.png" alt="Gallery" border="0"></a>
   <div style="clear:both; height:40px"></div>
@@ -91,9 +91,9 @@
   <div style="clear:both; height:40px"></div>
   <a href="store.html" class="link page"><img src="images/store.png" alt="Store" border="0"></a>
   <div style="clear:both; height:40px"></div>
-  <!--<a href="dblog/default.asp" class="link page"><img src="images/fan-club.png" alt="Fan Club" border="0"></a>-->
+  <!--<a href="dblog/default.html" class="link page"><img src="images/fan-club.png" alt="Fan Club" border="0"></a>-->
   <div style="clear:both; height:100px"></div>
-  <a href="private.asp" class="link page"><img src="images/area.png" alt="Restricted Area" border="0"></a>
+  <a href="private.html" class="link page"><img src="images/area.png" alt="Restricted Area" border="0"></a>
   </div>
 </td></tr></table>  
 </div>
