--- a/la-trompette.html
+++ b/la-trompette.html
@@ -49,27 +49,27 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
 
-<embed src="/web/20170303095851oe_/http://in-grid.it/music/la-trompette/La-Trompette-Bernasconi-Club-Mix.mp3" width="120" height="15" autostart="false">
+<embed src="http://in-grid.it/music/la-trompette/La-Trompette-Bernasconi-Club-Mix.mp3" width="120" height="15" autostart="false">
 </embed><noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. La Trompette (Bernasconi Club Mix)</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095851oe_/http://in-grid.it/music/la-trompette/La-Trompette-Bernasconi-Radio-Edit.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-trompette/La-Trompette-Bernasconi-Radio-Edit.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. La Trompette (Bernasconi Radio Edit)</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095851oe_/http://in-grid.it/music/la-trompette/La-Trompette-Caos-Club-Mix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-trompette/La-Trompette-Caos-Club-Mix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. La Trompette (Caos Club Mix) </strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095851oe_/http://in-grid.it/music/la-trompette/La-Trompette-Caos-Radio-Edit.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-trompette/La-Trompette-Caos-Radio-Edit.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. La Trompette (Caos Radio Edit)</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095851oe_/http://in-grid.it/music/la-trompette/La-Trompette-Original-2010-Mix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/la-trompette/La-Trompette-Original-2010-Mix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05. La Trompette (Original 2010 Mix)</strong><br>
 
 
