--- a/lesfous-single.html
+++ b/lesfous-single.html
@@ -50,52 +50,52 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/01.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/01.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. Les Fous – Radio Edit</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/02.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/02.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Les Fous – DiskoMachine &amp; MarcoJ Radio Mix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/03.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/03.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. Les Fous – Extended Mix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/04.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/04.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. Les Fous – DiskoMachine &amp; MarcoJ Club Remix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/05.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/05.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05.   Les Fous – Fedo Mora Club</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/06.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/06.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>06. Les Fous – DiskoMachine &amp; MarcoJ Instrumental</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/07.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/07.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>07. Les Fous – Chill Version</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/08.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/08.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>&gt;&gt;SPECIAL BONUS&gt;&gt;	08. Stick To You – Radio Edit</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/09.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/09.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>&gt;&gt;SPECIAL BONUS&gt;&gt; (ENGLISH  VERSION) 09. Stick To You – Fedo Mora Club</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042305oe_/http://in-grid.it/music/les-fous-single/10.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/les-fous-single/10.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>&gt;&gt;SPECIAL BONUS&gt;&gt; 10. Stick To You – Extended Mix</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
