--- a/mamamia-single.html
+++ b/mamamia-single.html
@@ -50,12 +50,12 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303042523oe_/http://in-grid.it/music/mama-mia-single/mamamia_radioedit_english.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/mama-mia-single/mamamia_radioedit_english.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. Mama Mia radioedit english</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303042523oe_/http://in-grid.it/music/mama-mia-single/mamamia_radioedit_french.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/mama-mia-single/mamamia_radioedit_french.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Mama Mia radioedit french</strong><br>
 
 
