--- a/rendezvous.html
+++ b/rendezvous.html
@@ -50,62 +50,62 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/InTango.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/InTango.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. In-Tango</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/TuEsFoutu.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/TuEsFoutu.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Tu Es Foutu</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/MaisLaNuitIlDort.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/MaisLaNuitIlDort.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. Mais La Nuit... Il Dort</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/Shock.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/Shock.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. Shock</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/DansMaMemoire.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/DansMaMemoire.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05. Dans Ma Memoire</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/PourToujours.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/PourToujours.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>06. Pour Toujours</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/SouvenirD.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/SouvenirD.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>07. Souvenir D'ete</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/ImFolleDeToi.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/ImFolleDeToi.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>08. I'm Folle De Toi</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/JeNeCroisPas.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/JeNeCroisPas.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>09. Je Ne Crois Pas</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/EsclaveDeToi.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/EsclaveDeToi.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>10. Esclave De Toi</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/AhLamourLamour.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/AhLamourLamour.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>11. Ah L'Amour L'Amour</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303101015oe_/http://in-grid.it/music/rendez-vous/VaAuDiable.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/rendez-vous/VaAuDiable.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>12. Va Au Diable</strong><br>
 
 
