--- a/viveleswing-single.html
+++ b/viveleswing-single.html
@@ -50,37 +50,37 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_rivazedit.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_rivazedit.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. RIVAZ RADIO EDIT</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabinbrassyradioedit.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabinbrassyradioedit.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. GABIN BRASSY RADIO EDIT</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_rivazclubremix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_rivazclubremix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. RIVAZ CLUB REMIX  </strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabinbrassyremix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabinbrassyremix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>04. GABIN BRASSY REMIX</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_suonhoreshaked.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_suonhoreshaked.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>05. SUONHO RESHAKED</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_bebop.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_bebop.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>06. BE BOP BONUS TRACK</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303033550oe_/http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabininstrumental.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/vive-le-swing/ingrid_viveleswing_gabininstrumental.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>07.  GABIN INSTRUMENTAL</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
