--- a/shock-single.html
+++ b/shock-single.html
@@ -50,7 +50,7 @@
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303100730oe_/http://in-grid.it/music/shock-single/Shock.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/shock-single/Shock.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. Shock</strong><br>
 
 
