--- a/tuesfoutu-single.html
+++ b/tuesfoutu-single.html
@@ -45,22 +45,22 @@
   <div style="clear:both; height:160px"></div>
   <img src="images/music-tit.png"><br><br><!--testo-->
   <br><br><br><br><br><br>
-  <img src="music/single-tuesfoutu.png" width="585" height="297"><br>
+  <!-- <img src="music/single-tuesfoutu.png" width="585" height="297"><br> -->
   <br>
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
   
-<embed src="/web/20170303095948oe_/http://in-grid.it/music/tu-es-foutu-single/1 Radio EDIT.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/tu-es-foutu-single/1 Radio EDIT.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>01. Tu es foutu - Radio edit</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095948oe_/http://in-grid.it/music/tu-es-foutu-single/2 Extended.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/tu-es-foutu-single/2 Extended.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>02. Tu es foutu - Extended</strong><br>
 
 <hr style="border:1px dotted #CCC" noshade>
 
-<embed src="/web/20170303095948oe_/http://in-grid.it/music/tu-es-foutu-single/3 Harlem Hustlers club mix.mp3" width="120" height="15" autostart="false"></embed>
+<embed src="http://in-grid.it/music/tu-es-foutu-single/3 Harlem Hustlers club mix.mp3" width="120" height="15" autostart="false"></embed>
 <noembed>Elemento multimediale non supportato!</noembed>&nbsp;&nbsp;<strong>03. Tu es foutu - Harlem Hustlers club mix</strong><br>
 
 
