--- a/contatti.html
+++ b/contatti.html
@@ -58,7 +58,10 @@ p {
     Energy (<a href="http://www.energyprod.it/" target="_blank">www.energyprod.it</a>)</p>
   <p>&nbsp;</p>
   <img src="images/authorized.png"><br><br>
-  <p>In-Grid In México (<a href="http://www.ingridinmex.com/" target="_blank">www.ingridinmex.com</a>)<br>
+  <p>
+    <!-- In-Grid In México (<a href="http://www.ingridinmex.com/" target="_blank">www.ingridinmex.com</a>) -->
+    
+    <br>
     In-Grid In Poland (<a href="http://in-grid.com.pl/" target="_blank">in-grid.com.pl/</a>)</p>
   
   </div>
