--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected.png" width="160" height="35"></div>
 <div style="clear:both; height:10px;"></div>
-<div style="float:right; padding-right:80px"><img src="images/you-tube1-g.png" border="0" name="youtube"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
   <div style="clear:both; height:110px;"></div>
   <a href="news.html" class="link page"><img src="images/news.png" alt="News" border="0"></a>
   <div style="clear:both; height:60px"></div>
