--- a/news2.html
+++ b/news2.html
@@ -47,16 +47,16 @@
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px  "><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
 <div style=" width:450px; padding-left:100px; float:left">
   <div style="clear:both; height:160px"></div>
   <img src="images/news-tit.png"><br><br><!--testo--><br><br>
-  <img src="images/news-tit-2.png" width="374" height="25"><br><br>
+  <!-- <img src="images/news-tit-2.png" width="374" height="25"><br><br> -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
+  <!-- <tr>
     <td width="33%" align="center"><table width="132" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td style="background-image:url(images/img_news2-1-mini.jpg); background-repeat:no-repeat; background-position: center center;"><a href="images/img_news2-1-big.jpg" class="lightbox-image" rel="prettyphoto[gallery1]" title="In-Grid"><img src="images/miniature.png" width="132" height="130" border="0"></a></td>
@@ -73,10 +73,12 @@
           <td style="background-image:url(images/img_news2-3-mini.jpg); background-repeat:no-repeat; background-position: center center; background-size: 110px 110px;"><a href="images/img_news2-3-big.jpg" class="lightbox-image" rel="prettyphoto[gallery1]" title="In-Grid"><img src="images/miniature.png" width="132" height="130" border="0"></a></td>
         </tr>
       </table></td>
-  </tr>
-  <tr><td colspan="3">&nbsp;</td></tr><tr>
+  </tr> -->
+  <tr><td colspan="3">&nbsp;</td></tr>
+  <tr>
     <td colspan="3"><div style="height:650px; width:510px; padding:15px; background-image:url(images/alpha.png)"><strong>Russian Duet&nbsp;: IN-GRID &amp; ZHANNA FRISKE&nbsp;&nbsp;"Padaet Sneg"</strong><br><br>
-      <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a></div>
+      <!-- <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a></div> -->
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ehSnLwegCHg?si=i7dcPOFa4QMpEfsZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </td>
   </tr>
 </table>
@@ -105,6 +107,6 @@
   </div>
 </td></tr></table>  
 </div>
-<img src="images/loading.gif" alt="" id="loader"/>
+<img src="images/loading (1).gif" alt="" id="loader"/>
 </body>
 </html>
