--- a/video=3.html
+++ b/video=3.html
@@ -22,9 +22,6 @@
 	margin:0 auto;
 	padding:0;
 }
-.clickable{
-  cursor: pointer
-}
 
 </style>
 <script type="text/javascript" src="js/animate.js"></script>
@@ -51,8 +48,7 @@
   <br>
   <div style="padding: 15px;">
     <div style="padding-top: 2px;">
-      <a href="https://www.youtube.com/@ingridalberini/">Official YouTube Channel</a>
-    </div>
+      <a href="https://www.youtube.com/@ingridalberini/">Official YouTube Channel</a></div>
     <div style="padding-top: 2px;">
       <p><a href="https://www.youtube.com/@EnergyProductionRec/featured">Energy Productions </a>(Label)</p>
     </div>
@@ -74,13 +70,12 @@
         <object width="485" height="259">
 	  <param name="movie" value="http://www.youtube.com/v/qOGSqC7xds8?version=3&amp;autohide=1&amp;autoplay=1&amp;fs=1&amp;rel=0&amp;loop=1&amp;playlist=qOGSqC7xds8"></param>
 	  <param name="allowFullScreen" value="true"></param>
-    <img src="images/Tu Es Foutu.png" alt="" width="490" height="260" onclick="window.open('http://www.youtube.com/v/qOGSqC7xds8?version=3&amp;autohide=1&amp;autoplay=1&amp;fs=1&amp;rel=0&amp;loop=1&amp;playlist=qOGSqC7xds8', '_blank')" class="clickable">
-
+    <!-- <img src="images/Tu Es Foutu.png" alt="" width="485" height="259" onclick="window.open('http://www.youtube.com/v/qOGSqC7xds8?version=3&amp;autohide=1&amp;autoplay=1&amp;fs=1&amp;rel=0&amp;loop=1&amp;playlist=qOGSqC7xds8', '_blank')"> -->
+    <iframe width="485" height="259" src="https://www.youtube.com/embed/cRYKAK08_R8?si=TfmJO6bu64QRyKlw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <!-- <iframe width="485" height="259" src="http://www.youtube.com/v/qOGSqC7xds8?version=3&amp;autohide=1&amp;autoplay=1&amp;fs=1&amp;rel=0&amp;loop=1&amp;playlist=qOGSqC7xds8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 	  <!-- <embed src="http://www.youtube.com/v/qOGSqC7xds8?version=3&amp;autohide=1&amp;autoplay=1&amp;fs=1&amp;rel=0&amp;loop=1&amp;playlist=qOGSqC7xds8" type="application/x-shockwave-flash" allowfullscreen="true" width="485" height="259"></embed> -->
 	</object>
-  <img src="images/tit-tu-es-fuotu.png" style="padding-top:6px">
 	
     </td>
       </tr>
