--- a/contatti.html
+++ b/contatti.html
@@ -33,36 +33,35 @@ p {
  
  
 
-<div id="boxes"><a href="index.html"><img src="images/ingrid.png" border="0" style="float:left "></a>
+<div id="boxes">
+  <a href="index.html"><img src="images/ingrid.png" border="0" style="float:left "></a>
 <div style="float:right;">
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px"><img src="images/you-tube1-g.png" border="0" name="youtube"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
 <div style=" width:450px; padding-left:100px; float:left">
   <div style="clear:both; height:160px"></div>
-  <img src="images/contatti-tit.png"><br><br>
+  <!-- <img src="images/contatti-tit.png"><br><br> -->
   <p>WORLDWIDE MANAGEMENT</p>
   <p>PETER PAN ENTERPRISES </p>
   <p>Via San Maurilio 13 <br>
     20123 Milano </p>
-  <p>Tel. + 39 02 72002600 <br>
-    Fax + 39 02 72002788</p>
-  <p>E-mail: <a href="">ppe@rslegal.it</a></p>
+  <p>Tel: +39 02 72002600 <br>
+    Fax: +39 02 72002788</p>
+  <p>E-mail: ppe@rslegal.it</p>
   <p>&nbsp;</p>
   <img src="images/officialpages-tit.png"><br><br>
-  <p>Offlimits-production (<a href="http://www.offlimits-production.it/" target="_blank">www.offlimits-production.it</a>)<br>
-    Energy (<a href="http://www.energyprod.it/" target="_blank">www.energyprod.it</a>)</p>
+  <p>Offlimits-production<br>
+    Energy</p>
   <p>&nbsp;</p>
   <img src="images/authorized.png"><br><br>
-  <p>
-    <!-- In-Grid In México (<a href="http://www.ingridinmex.com/" target="_blank">www.ingridinmex.com</a>) -->
-    
+  <p>   
     <br>
-    In-Grid In Poland (<a href="http://in-grid.com.pl/" target="_blank">in-grid.com.pl/</a>)</p>
+    In-Grid In Poland </p>
   
   </div>
 
