--- a/news02.html
+++ b/news02.html
@@ -37,7 +37,7 @@
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px  "><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
@@ -48,10 +48,11 @@
   <!-- <img src="images/news-tit-2.png" width="374" height="25"><br><br> -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="190" style="background-image:url(images/img_news2.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
+    <td width="190" style="background-image:url(images/img_news2.jpg); background-repeat:no-repeat; background-position: center center"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px">
      <strong>Russian Duet&nbsp;: IN-GRID &amp; ZHANNA FRISKE&nbsp;&nbsp;"Padaet Sneg"</strong><br><br>
-      <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a>
+      <!-- <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a> -->
+      <iframe width="260" height="120" src="https://www.youtube.com/embed/ehSnLwegCHg?si=z8pe98wV4xCmSuqB&amp;start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
       </td>
   </tr>
@@ -63,10 +64,12 @@
  <!-- <img src="images/news-tit-1.png" width="298" height="26"><br><br> -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="190" style="background-image:url(images/img_news1.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
+    <td width="190" style="background-image:url(images/img_news1.jpg); background-repeat:no-repeat; background-position: center center"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px"><strong>Duet: IN-GRID &amp; ZOE TIGANOURIA, a famous Greek Accordionist</strong><br><br>
-      <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>
-      </td>
+      <!-- <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div> -->
+      <img src="images/yt-Avec-toi.png" alt="" width="260" height="120" onclick="window.open('http://www.youtube.com/watch?v=gWetXtsOZOU', '_blank')">
+
+    </td>
   </tr>
 </table><br>
 <div style=" width:510px"><a href="news1.html"><img src="images/read-more.png" width="65" height="12" border="0" align="right"></a></div><br> <hr style="border:1px solid #fff; width:510px">
