--- a/news1.html
+++ b/news1.html
@@ -23,6 +23,10 @@
 	padding:0;
 }
 
+.clickable{
+  cursor: pointer
+}
+
 </style>
 <script type="text/javascript" src="js/animate.js"></script>
 
@@ -45,7 +49,7 @@
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px  "><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
@@ -54,7 +58,7 @@
   <img src="images/news-tit.png"><br><br><!--testo--><br><br>
   <!-- <img src="images/news-tit-1.png" width="298" height="26"><br><br> -->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
+  <!-- <tr>
     <td width="33%" align="center"><table width="132" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td style="background-image:url(images/img_news1-mini.jpg); background-repeat:no-repeat; background-position: center center;"><a href="images/img_news1-big.jpg" class="lightbox-image" rel="prettyphoto[gallery1]" title="In-Grid"><img src="images/miniature.png" width="132" height="130" border="0"></a></td>
@@ -87,11 +91,13 @@
           <td style="background-image:url(images/zoe03_small.jpg); background-repeat:no-repeat; background-position: center center; background-size: 110px 110px;"><a href="images/zoe03_big.jpg" class="lightbox-image" rel="prettyphoto[gallery1]" title="In-Grid"><img src="images/miniature.png" width="132" height="130" border="0"></a></td>
         </tr>
     </table></td>
-  </tr>
+  </tr> -->
   <tr><td colspan="3">&nbsp;</td></tr><tr>
     <td colspan="3"><div style="height:650px; width:510px; padding:15px; background-image:url(images/alpha.png)"><strong>Duet: IN-GRID &amp; ZOE TIGANOURIA, a famous Greek Accordionist</strong><br><br>
-      <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>      </td>
-  </tr>
+      <!-- <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div>      </td> -->
+      <img src="images/yt-Avec-toi.png" alt="" width="360" height="200" onclick="window.open('http://www.youtube.com/watch?v=gWetXtsOZOU', '_blank')" class="clickable">
+
+    </tr>
 </table>
 </div>
 </td>
