--- a/news4.html
+++ b/news4.html
@@ -47,7 +47,7 @@
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px  "><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
@@ -56,7 +56,7 @@
   <img src="images/news-tit.png"><br><br><!--testo--><br><br>
   <img src="images/news-tit-4.png"><br><br>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
+  <!-- <tr>
     <td width="33%" align="center"><table width="132" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td style="background-image:url(images/img_la-trompette_mini.jpg); background-repeat:no-repeat; background-position: center center;"><a href="images/img_la-trompette_big.jpg" class="lightbox-image" rel="prettyphoto[gallery1]" title="In-Grid"><img src="images/miniature.png" width="132" height="130" border="0"></a></td>
@@ -65,7 +65,7 @@
 </td>
     <td width="33%" align="center">&nbsp;</td>
     <td width="33%" align="center">&nbsp;</td>
-  </tr>
+  </tr> -->
   <tr><td colspan="3">&nbsp;</td></tr><tr>
     <td colspan="3"><div style="height:650px; width:510px; padding:15px; background-image:url(images/alpha.png)"><strong>La Trompette (feat. In-Grid)</strong><br>
       <br>
