--- a/voila.html
+++ b/voila.html
@@ -35,7 +35,7 @@
 <div style="clear:both; height:40px"></div>
 <div style="float:right; padding-right:80px"><img src="images/stay-connected2.png" width="120" height="26"></div>
 <div style="clear:both; height:5px;"></div>
-<div style="float:right; padding-right:80px"><img src="images/you-tube1-g.png" border="0" name="youtube"></div>
+<div style="float:right; padding-right:80px"><a href="http://www.youtube.com/user/ingridalberini" target="_blank"><img src="images/you-tube1-g.png" name="youtube" width="242" height="48" border="0"></a></div>
 </div>
 <br><br>
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
