--- a/contatti.html
+++ b/contatti.html
@@ -45,7 +45,7 @@ p {
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tr><td valign="top">
 <div style=" width:450px; padding-left:100px; float:left">
   <div style="clear:both; height:160px"></div>
-  <!-- <img src="images/contatti-tit.png"><br><br> -->
+  <img src="images/contatti-tit.png"><br><br>
   <p>WORLDWIDE MANAGEMENT</p>
   <p>PETER PAN ENTERPRISES </p>
   <p>Via San Maurilio 13 <br>
@@ -54,14 +54,14 @@ p {
     Fax: +39 02 72002788</p>
   <p>E-mail: ppe@rslegal.it</p>
   <p>&nbsp;</p>
-  <img src="images/officialpages-tit.png"><br><br>
+  <!-- <img src="images/officialpages-tit.png"><br><br>
   <p>Offlimits-production<br>
     Energy</p>
   <p>&nbsp;</p>
   <img src="images/authorized.png"><br><br>
   <p>   
     <br>
-    In-Grid In Poland </p>
+    In-Grid In Poland </p> -->
   
   </div>
 
