--- a/contatti.html
+++ b/contatti.html
@@ -52,7 +52,8 @@ p {
     20123 Milano </p>
   <p>Tel: +39 02 72002600 <br>
     Fax: +39 02 72002788</p>
-  <p>E-mail: ppe@rslegal.it</p>
+  <p>E-mail: <a href="">ppe@rslegal.it</a></p>  
+  
   <p>&nbsp;</p>
   <!-- <img src="images/officialpages-tit.png"><br><br>
   <p>Offlimits-production<br>
