--- a/news02.html
+++ b/news02.html
@@ -52,7 +52,7 @@
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px">
      <strong>Russian Duet&nbsp;: IN-GRID &amp; ZHANNA FRISKE&nbsp;&nbsp;"Padaet Sneg"</strong><br><br>
       <!-- <a href="http://www.youtube.com/watch?v=ehSnLwegCHg" target="_blank">http://www.youtube.com/watch?v=ehSnLwegCHg</a> -->
-      <iframe width="260" height="120" src="https://www.youtube.com/embed/ehSnLwegCHg?si=z8pe98wV4xCmSuqB&amp;start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="270" height="120" src="https://www.youtube.com/embed/ehSnLwegCHg?si=z8pe98wV4xCmSuqB&amp;start=300" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
       </td>
   </tr>
@@ -67,7 +67,7 @@
     <td width="190" style="background-image:url(images/img_news1.jpg); background-repeat:no-repeat; background-position: center center"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px"><strong>Duet: IN-GRID &amp; ZOE TIGANOURIA, a famous Greek Accordionist</strong><br><br>
       <!-- <a href="http://www.youtube.com/watch?v=gWetXtsOZOU" target="_blank">http://www.youtube.com/watch?v=gWetXtsOZOU</a></div> -->
-      <img src="images/yt-Avec-toi.png" alt="" width="260" height="120" onclick="window.open('http://www.youtube.com/watch?v=gWetXtsOZOU', '_blank')">
+      <img src="images/yt-Avec-toi.png" alt="" width="260" height="120" onclick="window.open('http://www.youtube.com/watch?v=gWetXtsOZOU', '_blank')" style="cursor:pointer;">
 
     </td>
   </tr>
