--- a/shock-single.html
+++ b/shock-single.html
@@ -86,6 +86,6 @@
   </div>
 </td></tr></table>  
 </div>
-<img src="images/loading.gif" alt="" id="loader"/>
+<img src="images/loading (1).gif" alt="" id="loader"/>
 </body>
 </html>
