--- a/voila.html
+++ b/voila.html
@@ -43,7 +43,7 @@
   <div style="clear:both; height:160px"></div>
   <img src="images/music-tit.png"><br><br><!--testo-->
   <br><br><br><br><br><br>
-  <img src="music/album-voila.png" width="585" height="297"><br>
+  <!-- <img src="music/album-voila.png" width="585" height="297"><br> -->
   <br>
   <div style="background-image:url(images/music-bk.png); background-repeat:no-repeat; background-position: top center; width:585px; height:588px" class="white">
     <div style="padding:30px">
@@ -158,6 +158,6 @@
   </div>
 </td></tr></table>  
 </div>
-<img src="images/loading.gif" alt="" id="loader"/>
+<img src="images/loading (1).gif" alt="" id="loader"/>
 </body>
 </html>
