--- a/loungemusique.html
+++ b/loungemusique.html
@@ -148,6 +148,6 @@
   </div>
 </td></tr></table>  
 </div>
-<img src="images/loading.gif" alt="" id="loader"/>
+<img src="images/loading (1).gif" alt="" id="loader"/>
 </body>
 </html>
