--- a/passion.html
+++ b/passion.html
@@ -166,6 +166,6 @@
   </div>
 </td></tr></table>  
 </div>
-<img src="images/loading.gif" alt="" id="loader"/>
+<img src="images/loading (1).gif" alt="" id="loader"/>
 </body>
 </html>
