--- a/news.html
+++ b/news.html
@@ -68,7 +68,8 @@
     <td width="190" style="background-image:url(images/img_news4.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px"><strong>La Trompette (feat. In-Grid)</strong><br>
       <br>
-      Gary Caos &amp; Rico Bernasconi<br> <a href="http://itunes.apple.com/de/album/la-trompette-feat.-in-grid-ep/id549816090" target="_blank">http://itunes.apple.com/de/album/la-trompette-feat.-in-grid-ep/id549816090</a></div>
+      Gary Caos &amp; Rico Bernasconi<br> 
+    </div>
       </td>
   </tr>
 </table><br>
@@ -82,7 +83,7 @@
     <td width="190" style="background-image:url(images/img_news3.jpg); background-repeat:no-repeat; background-position: center center"><img src="images/quad-news.png" width="190" height="190"></td>
     <td><div style="background-color:#FFFFFF; height:160px; width:270px; margin-left:20px; padding:15px"><strong>Tu Es Foutu 2012</strong><br>
       <br>
-      <a href="http://www.juno.co.uk/products/tu-es-foutu-2012/1991838-02/" target="_blank">http://www.juno.co.uk/products/tu-es-foutu-2012/1991838-02/</a></div>
+    </div>
       </td>
   </tr>
 </table><br>
